--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
        <p> I'm an artist living in Denver, Colorado.</p>
         <br> <br>
 <p>As an artist, I'm interested in:</p>
-        <ul>
+        <div class="interests"><ul class="arts">
            <li>Producing abstract art</li>
  <li>Creating street graffiti art</li>
 <li>Connecting with like-minded artists</li>
-        </ul>
+        </ul></div>
         <p>Please feel free to take a look at my website and feel free to <a href="#Contact"> contact me.</a></p>
         <h3>Pete's Background</h3>
 <p> After graduating college, I became an art teacher and worked with
@@ -49,14 +49,15 @@ excited to work with other artists to create new art.</p></article>
         <div>
           <h3>Abstract Red</h3>
           <img class="portfolio" src="images/abstract-red.png" alt="Abstract Red">
-          <article>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
-waistcoat scenester hell of.</article>
+          <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+waistcoat scenester hell of.</p>
         </div>
         <div>
          <h3>Spiral-Zany</h3> 
           <img class="portfolio" src="images/spiral-zany.png" alt="Spiral Zany">
-          <article>Sriracha portland taxidermy cronut messenger bag, vegan
-distillery. Vaporware kickstarter air plant mumblecore food truck</article>
+          <p>Sriracha portland taxidermy cronut messenger bag, vegan
+distillery. Vapoprware kickstarter air plant mumblecore food truck</p>
+  
         </div>
         <div>
           <h3>Melted-Rainbow</h3>
@@ -71,12 +72,13 @@ locavore shabby chic forage.
 
       <article id="Contact">
         <h2><i>Contact</i></h2>
-I'd love to hear from you! Please feel free to contact or follow me:
-          <ol>
+<p><I'd love to hear from you! Please feel free to contact or follow me: </p>
+          <div class="contactlist"> 
+            <ol class="socials">
  <li> <a target="_blank" rel="noopener" href="https://www.linkedin.com"> LinkedIn </a> </li>
 <li> <a target="_blank" rel="noopener" href="https://www.instagram.com"> Instagram </a> </li> 
 <li> <a target="_blank" rel="noopener" href="https://www.pinterest.com"> Pinterest </a> </li> 
-          </ol>
+          </ol></div>
           </article>
     
   </main>
