--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ distillery. Vapoprware kickstarter air plant mumblecore food truck</p>
         <div>
           <h3>Melted-Rainbow</h3>
           <img class="portfolio" src="images/melted-rainbow.png" alt="Melted Rainbow">
-          <article>Edison bulb single-origin coffee snackwave, actually ennui
-locavore shabby chic forage.
-</article>
+          <p>Edison bulb single-origin coffee snackwave, actually ennui
+locavore shabby chic forage.</p>
+
         </div>
       </article>
 
@@ -72,7 +72,7 @@ locavore shabby chic forage.
 
       <article id="Contact">
         <h2><i>Contact</i></h2>
-<p><I'd love to hear from you! Please feel free to contact or follow me: </p>
+<p>I'd love to hear from you! Please feel free to contact or follow me: </p>
           <div class="contactlist"> 
             <ol class="socials">
  <li> <a target="_blank" rel="noopener" href="https://www.linkedin.com"> LinkedIn </a> </li>
